--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -189,6 +189,7 @@
     margin: 0 auto;
     font-size: 25rem;
     position: relative;
+    margin-bottom: 3rem;
     color: var(--text-color);
     transition: transfrom 0.3s;
 
